--- a/HTML Version/custom.css
+++ b/HTML Version/custom.css
@@ -4,6 +4,39 @@
     padding: 20px 30px;
     background-color: rgb(235, 235, 235);
     border-radius: 10px;
-    box-shadow: 0 0 10px 0 #000;
+    box-shadow: 0 0 30px 0 #000;
     margin: auto;
+}
+
+h1 {
+    color: rgb(235, 235, 235);
+    letter-spacing: 15px;
+    text-shadow: 0 0 20px black;
+}
+
+ul {
+    margin-left: auto;
+    padding: 6%;
+}
+
+button {
+    text-align: center;
+}
+
+input {
+    margin: auto;
+    text-align: center;
+    padding: 6%;
+}
+
+li {
+    text-align: center;
+}
+
+header {
+    padding: 0px;
+}
+
+.nav-bar {
+    background-color: #3b6978;
 }
