--- a/HTML Version/custom.css
+++ b/HTML Version/custom.css
@@ -4,8 +4,12 @@
     padding: 20px 30px;
     background-color: rgb(235, 235, 235);
     border-radius: 10px;
-    box-shadow: 0 0 30px 0 #000;
+    box-shadow: 0 0 50px 0 #000;
     margin: auto;
+}
+
+.gitlogo {
+    margin: 0px;
 }
 
 nav {
@@ -51,6 +55,7 @@ header {
 }
 
 .nav-bar {
-    background-color: #3b6978;
+    background-color: #3282b8;
     margin-top: auto;
+    box-shadow: 0 0 40px 0 #0f4c75;
 }
